--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script>
     <script src="app.js" defer></script>
+    <script src="https://kit.fontawesome.com/d98f1af264.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -17,7 +18,17 @@
 
 <body>
     <header>
-
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="menu">
+                        <div class="imgbox">
+                            <img src="assets/img/navbar-logo.svg" alt="...">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
 
     <main>
