--- a/index.html
+++ b/index.html
@@ -21,10 +21,17 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="menu">
+                    <div class="menu d-flex justify-content-between">
                         <div class="imgbox">
-                            <img src="assets/img/navbar-logo.svg" alt="...">
+                            <img src="https://startbootstrap.github.io/startbootstrap-agency/assets/img/navbar-logo.svg" alt="">
                         </div>
+                        <nav>
+                            <a href="#">SERVICES</a>
+                            <a href="#">PORTFOLIO</a>
+                            <a href="#">ABOUT</a>
+                            <a href="#">TEAM</a>
+                            <a href="#">CONTACT</a>
+                        </nav>
                     </div>
                 </div>
             </div>
