--- a/index.html
+++ b/index.html
@@ -39,6 +39,17 @@
     </header>
 
     <main>
+        <section id="welcome">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="imgbox">
+                            <img src="" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
 
