--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="col-md-12">
                     <div class="menu d-flex justify-content-between">
                         <div class="imgbox">
-                            <img src="https://startbootstrap.github.io/startbootstrap-agency/assets/img/navbar-logo.svg" alt="">
+                            <img src="Ass-1/navbar-logo.svg" alt="">
                         </div>
                         <nav>
                             <a href="#">SERVICES</a>
@@ -43,8 +43,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="imgbox">
-                            <img src="" alt="">
+                        <div class="box">
+                            
                         </div>
                     </div>
                 </div>
