--- a/index.html
+++ b/index.html
@@ -44,8 +44,23 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="box">
-                            
+                            <div class="minibox">
+                                <h1>Welcome To Our Studio!</h1>
+                                <h2>IT'S NICE TO MEET YOU</h2>
+                                <div class="btn">
+                                    <h3>TELL ME MORE</h3>
+                                </div>
+                            </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        
                     </div>
                 </div>
             </div>
