--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                             <img src="Ass-1/navbar-logo.svg" alt="">
                         </div>
                         <nav>
-                            <a href="#">SERVICES</a>
-                            <a href="#">PORTFOLIO</a>
+                            <a href="services">SERVICES</a>
+                            <a href="portfolio">PORTFOLIO</a>
                             <a href="#">ABOUT</a>
                             <a href="#">TEAM</a>
                             <a href="#">CONTACT</a>
@@ -56,16 +56,131 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section id="services">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12">
-                        
+                    <div class="col-md-12 text-center">
+                        <h1>SERVICES</h1>
+                        <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="box">
+                            <div class="icon">
+                                <i class="fa-solid fa-cart-shopping"></i>
+                            </div>
+                        </div>
+                        <div class="textbox text-center">
+                            <h2>E-Commerce</h2>
+                            <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam saepe veritatis magni animi voluptatem, aliquid, officia consequuntur atque eum suscipit nam maxime sapiente molestiae veniam nisi assumenda reprehenderit corporis dolor.</h1>
+                        </div>    
+                    </div>
+                    <div class="col-md-4">
+                        <div class="box">
+                            <div class="icon">
+                                <i class="fa-solid fa-laptop"></i>
+                            </div>
+                        </div>
+                        <div class="textbox text-center">
+                            <h2>Responslve Design</h2>
+                            <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam saepe veritatis magni animi voluptatem, aliquid, officia consequuntur atque eum suscipit nam maxime sapiente molestiae veniam nisi assumenda reprehenderit corporis dolor.</h1>
+                        </div>                         
+                    </div> 
+                    <div class="col-md-4">
+                        <div class="box1">
+                            <div class="icon">
+                                <i class="fa-solid fa-lock"></i>
+                            </div>
+                        </div>
+                        <div class="textbox text-center">
+                            <h2>Web Security</h2>
+                            <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam saepe veritatis magni animi voluptatem, aliquid, officia consequuntur atque eum suscipit nam maxime sapiente molestiae veniam nisi assumenda reprehenderit corporis dolor.</h1>
+                        </div>                   
+                    </div>                       
+                </div>
+            </div>
+        </section>
+        <section id="portfolio">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <h1>PORTFOLIO</h1>
+                        <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="box1">
+                            <div class="imgbox">
+                                <img src="Ass-1/portfolio/1.jpg" alt="">
+                            </div>
+                            <div class="textbox">
+                                <h1>Threads</h1>
+                                <h2>Mustration</h2>
+                            </div>
+                        </div>
+                    </div>    
+                    <div class="col-md-4">
+                        <div class="box1">
+                            <div class="imgbox">
+                                <img src="Ass-1/portfolio/2.jpg" alt="">
+                            </div>
+                            <div class="textbox1">
+                                <h1>Explore</h1>
+                                <h2>Graphic Design</h2>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="box1">
+                            <div class="imgbox">
+                                <img src="Ass-1/portfolio/3.jpg" alt="">
+                            </div>
+                            <div class="textbox">
+                                <h1>Finish</h1>
+                                <h2>Identily</h2>
+                            </div>
+                        </div>    
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="box2">
+                            <div class="imgbox">
+                                <img src="Ass-1/portfolio/4.jpg" alt="">
+                            </div>
+                            <div class="textbox">
+                                <h1>Lines</h1>
+                                <h2>Branding</h2>
+                            </div>
+                        </div>
+                    </div>    
+                    <div class="col-md-4">
+                        <div class="box2">
+                            <div class="imgbox">
+                                <img src="Ass-1/portfolio/5.jpg" alt="">
+                            </div>
+                            <div class="textbox1">
+                                <h1>Southwest</h1>
+                                <h2>Website Design</h2>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="box2">
+                            <div class="imgbox">
+                                <img src="Ass-1/portfolio/6.jpg" alt="">
+                            </div>
+                            <div class="textbox">
+                                <h1>Window</h1>
+                                <h2>Photography</h2>
+                            </div>
+                        </div>    
                     </div>
                 </div>
             </div>
         </section>
-
     </main>
 
     <footer>
