--- a/index.html
+++ b/index.html
@@ -181,6 +181,32 @@
                 </div>
             </div>
         </section>
+        <section id="about">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <h1>ABOUT</h1>
+                        <h2>Lorem ipsum dolor sit amet consectetur.</h2> 
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="textbox txtright">
+                            <h3>2009-2011</h3>
+                            <h4>Our  Humble  Beginnings</h4>
+                            <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</h5>
+                        </div>        
+                    </div>
+                    <div class="col-md-6">
+                        <div class="box1">
+                            <div class="imgbox">
+                                <img src="Ass-1/about/1.jpg" alt="" class="box1">
+                            </div>    
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
