--- a/index.html
+++ b/index.html
@@ -203,6 +203,24 @@
                                 <img src="Ass-1/about/1.jpg" alt="" class="box1">
                             </div>    
                         </div>
+                        <div class="box"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="box2">
+                            <div class="imgbox">
+                                <img src="Ass-1/about/2.jpg" alt="" class="box2">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="textbox1 text-left">
+                            <h3>March 2011</h3>
+                            <h4> An Agency is Born</h4>
+                            <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</h5>
+                        </div>
                     </div>
                 </div>
             </div>
